youker-assistant (1.1.2-0ubuntu1) trusty; urgency=low

  * Add IP Address and pid file.
  * Adjust the widget of system settings.
  * Change the background color.
  * Display the slidershow according to different users.
  * Modify debian/postinst and debian/postrm.
  * Display the current font style when clicked the change button.

 -- Kobe Lee (kylinkobe) <xiangli@ubuntukylin.com>  Mon, 04 Aug 2014 15:58:26 +0800

youker-assistant (1.1.0-0ubuntu1) trusty; urgency=low

  * Perfect for parameter when checkbox checked.
  * Get the correct version information of OS.
  * Do system scan with thread.
  * Use Python Socket and UUID to get LAN port, IP address and MAC address(LP: #1310882).
  * Add slider show and battery information.
  * Solved the interface flicker problem when it move(LP: #1304980).
  * Add some settings about Dash, Panel and Launcher.
  * Use camera to take pictures.
  * Modify moving zone of the main widget, file cleaner, cpu ratio and the monitor ball.
  * Modify weather model.

 -- Kobe Lee (kylinkobe) <xiangli@ubuntukylin.com>  Mon, 07 Jul 2014 22:43:31 +0800

youker-assistant (1.0.1-0ubuntu1) trusty; urgency=low

  * Modify display mode of weather forecast and system settings.
  * Add file manager and font style settings.
  * Improve system settings and restoring default settings.
  * Cache user account (not password).
  * Change the position of window control buttons.
  * Add configuration for Kysoft KuaiPan cloud client.
  * Add the instruction of Youker Assistant.
  * Open related folders when scanning items got double-clicked.
  * Notify users when operating the Kingsoft disk cloud configuration.
  * Modify Dbus starting method.
  
 -- Kobe Lee (kylinkobe) <xiangli@ubuntukylin.com>  Thu, 20 Mar 2014 10:14:56 +0800

youker-assistant (1.0.0-0ubuntu1) trusty; urgency=low

  * Access Yahoo weather info.
  * Add Class LoginDialog and HttpAuth to login with Ubuntu Kylin forum account.